--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 	<!-- Services -->
 	<script type="text/javascript" src="app/services/NodeConnection.js"></script>	
+	<script type="text/javascript" src="app/services/PromptService.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
