Added insertion support. Expanded upon existing partial functionality of add button, node js backend, and angular connection service. Currently functions for awards.

--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -1,7 +1,9 @@
 <md-card id="prompt-card">
 	<md-toolbar>
 		<div class="md-toolbar-tools">
-			Edit {{ servicebackend }}
+			<div ng-show="!backendAdd">Edit {{ servicebackend }}</div>
+			<div ng-show="backendAdd">Add {{ servicebackend }}</div>
+		 	
 		</div>
 	</md-toolbar>	
 	<md-card-content id="prompt-content">
