Added deletion support for awards and newspapers. Still requires update to auto refresh!

--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -3,7 +3,6 @@
 		<div class="md-toolbar-tools">
 			<div ng-show="!backendAdd">Edit {{ servicebackend }}</div>
 			<div ng-show="backendAdd">Add {{ servicebackend }}</div>
-		 	
 		</div>
 	</md-toolbar>	
 	<md-card-content id="prompt-content">
@@ -20,7 +19,8 @@
       			<input id="fileUpload" type="file" hide>
 		      	<md-button ng-click="setFile()" class="md-raised">Upload Image</md-button>	
 		      	<md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button>		
-		      	<md-button ng-click="makeBackendRequest()" class="md-raised">Save Changes</md-button>		
+		      	<md-button ng-click="deleteElement()" class="md-raised md-warn">DeleteItem</md-button>
+		      	<md-button ng-click="makeBackendRequest()" class="md-raised">Save Changes</md-button>
       		</div>	      	
       	</md-input-container>      		
 	</md-card-content>
