Refactored edit button functionality

--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -18,8 +18,8 @@
       		<div id="prompt-button-container" layout="column"> 
       			<input id="fileUpload" type="file" hide>
 		      	<md-button ng-click="setFile()" class="md-raised">Upload Image</md-button>	
-		      	<md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button>		
-		      	<md-button ng-click="deleteElement()" class="md-raised md-warn">DeleteItem</md-button>
+<!-- 		      	<md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button>		
+ -->		      	<md-button ng-click="deleteElement()" class="md-raised md-warn">DeleteItem</md-button>
 		      	<md-button ng-click="makeBackendRequest()" class="md-raised">Save Changes</md-button>
       		</div>	      	
       	</md-input-container>      		
