Art pieces animate on click from their origin, added close button to top right of art piece

--- a/app/promptviews/artDisplay.html
+++ b/app/promptviews/artDisplay.html
@@ -1,6 +1,8 @@
 <div id="full-art-wrapper">
 	<div id="full-art-inner-wrapper">
-		<md-button class="md-fab edit-button" ng-click="closeDialog()">X</md-button>
+		<md-button class="md-fab edit-button" ng-click="closeDialog()">
+			<i class="material-icons">close</i>
+		</md-button>
 		<img id="full-art-image" src="{{image}}">	
 	</div>
 </div>
