--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -13,12 +13,13 @@
       	<md-input-container>
 	        <label>Description</label>
 	        <textarea ng-model="promptData.description" md-maxlength="150" rows="3" md-select-on-focus></textarea>
-      	</md-input-container>   
+      	</md-input-container>  
+      	<img ngf-thumbnail="file" style="width:100px;"> 
       	<md-input-container class="align-center" flex>
       		<div id="prompt-button-container" layout="column"> 
-      			<input id="fileUpload" type="file" hide>
+      			<input id="fileUpload" type="file" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" accept="image/*" hide>
 		      	<md-button ng-click="setFile()" class="md-raised">Upload Image</md-button>	
-		      	<!-- <md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button> -->		
+		      	<md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button>		
 		      	<md-button ng-click="deleteElement()" class="md-raised md-warn">DeleteItem</md-button>
 		      	<md-button ng-click="makeBackendRequest()" class="md-raised">Save Changes</md-button>
       		</div>	      	
