--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
 	<!-- Sources -->
 	<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
-	<script type="text/javascript" src="node_modules/angular-material/angular-material.js"></script>	
+	<script type="text/javascript" src="node_modules/angular-material/angular-material.js"></script>
 	<script type="text/javascript" src="node_modules/angular-animate/angular-animate.js"></script>
 	<script type="text/javascript" src="node_modules/angular-aria/angular-aria.js"></script>
+	<script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
 
 	<!-- App -->
 	<script type="text/javascript" src="app/app.js"></script>
