Removed accidental image saves to Git. Image display now works on Awards and Newspapers. Improved front end display of Newspapers.

--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -12,7 +12,7 @@
       	</md-input-container>	
       	<md-input-container>
 	        <label>Description</label>
-	        <textarea ng-model="promptData.description" md-maxlength="150" rows="3" md-select-on-focus></textarea>
+	        <textarea ng-model="promptData.description" rows="3" md-select-on-focus></textarea>
       	</md-input-container>  
       	<img ngf-thumbnail="file" style="width:100px;"> 
       	<md-input-container class="align-center" flex>
