--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="app/styles/awardcard.css">
 	<link rel="stylesheet" type="text/css" href="app/styles/contact.css">
 	<link rel="stylesheet" type="text/css" href="app/styles/prompt.css">
+	<link rel="stylesheet" type="text/css" href="app/styles/newspapercard.css">
 
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Abel|Farsan|Galada|Lobster|Mitr|Poiret+One|Scope+One|Shadows+Into+Light" rel="stylesheet">
