Admin doesn't get extra tile, prompt content correctly set, newspaper section visuals drastically improved, added some sample images

--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -19,7 +19,7 @@
       		<div id="prompt-button-container" layout="column"> 
       			<input id="fileUpload" type="file" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" accept="image/*" hide>
 		      	<md-button ng-click="setFile()" class="md-raised">Upload Image</md-button>	
-		      	<md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button>		
+		      	<!-- <md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button>	 -->	
 		      	<md-button ng-click="deleteElement()" class="md-raised md-warn">DeleteItem</md-button>
 		      	<md-button ng-click="makeBackendRequest()" class="md-raised">Save Changes</md-button>
       		</div>	      	
