Massive implementation of user authentication. Added passport.js to handle login. All Post requests require authentication. Simple login screen.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<script type="text/javascript" src="app/controllers/ArtController.js"></script>
 	<script type="text/javascript" src="app/controllers/AnimationController.js"></script>
 	<script type="text/javascript" src="app/controllers/PromptController.js"></script>
+	<script type="text/javascript" src="app/controllers/LoginController.js"></script>
 
 	<!-- Primary Directives -->
 	<script type="text/javascript" src="app/directives/artCollectionSection.js"></script>
