Started working on login form front end changes.

--- a/app/promptviews/login-form.html
+++ b/app/promptviews/login-form.html
@@ -1,6 +1,8 @@
-<md-card id="login-card">
+<md-card class="prompt-card">
 	<md-toolbar>
-		Admin Login
+		<div class="md-toolbar-tools">
+			Admin Login
+		</div>
 	</md-toolbar>	
 	<md-card-content id="prompt-content">
 		<md-input-container>
