--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -1,4 +1,4 @@
-<md-card id="prompt-card">
+<md-card class="prompt-card">
 	<md-toolbar>
 		<div class="md-toolbar-tools">
 			<div ng-show="!backendAdd">Edit {{ servicebackend }}</div>
