--- a/index.html
+++ b/index.html
@@ -66,36 +66,36 @@
 <div class="webcore" layout="column" flex ng-controller="MainController">
 	<md-content id="piccollage" class="contentarea evencontent" layout="row" flex>
 		<div class="collagecol" layout="column" flex hide show-gt-md>
-			<div style="background-image: url('app/images/artwork/dog.jpg');" class="picblock largepic" flex>
+			<div style="background-image: url('app/images/art/dog.jpg');" class="picblock largepic" flex>
 			</div>
 		</div>
 		<div class="collagecol" layout="column" flex hide show-gt-sm>
-			<div style="background-image: url('app/images/artwork/dog2.jpg');" class="picblock smallpic" flex>
+			<div style="background-image: url('app/images/art/dog2.jpg');" class="picblock smallpic" flex>
 			</div>
-			<div style="background-image: url('app/images/artwork/dog4.jpg');" class="picblock smallpic" flex>
+			<div style="background-image: url('app/images/art/dog4.jpg');" class="picblock smallpic" flex>
 			</div>
 		</div>
 		<div class="collagecol" layout="column" flex>
-			<div style="background-image: url('app/images/artwork/dog3.jpg');" class="picblock smallpic" flex>
+			<div style="background-image: url('app/images/art/dog3.jpg');" class="picblock smallpic" flex>
 			</div>
-			<div style="background-image: url('app/images/artwork/figure.jpg');" class="picblock smallpic" flex>
+			<div style="background-image: url('app/images/art/figure.jpg');" class="picblock smallpic" flex>
 			</div>
 		</div>
 
 		<div class="collagecol" layout="column" flex hide show-gt-md>
-			<div style="background-image: url('app/images/artwork/family.jpg');" class="picblock largepic" flex>
+			<div style="background-image: url('app/images/art/family.jpg');" class="picblock largepic" flex>
 			</div>
 		</div>
 		
 		<div class="collagecol" layout="column" flex hide show-gt-xs>
-			<div style="background-image: url('app/images/artwork/figure.jpg');" class="picblock smallpic" flex>
+			<div style="background-image: url('app/images/art/figure.jpg');" class="picblock smallpic" flex>
 			</div>
-			<div style="background-image: url('app/images/artwork/girl.jpg');" class="picblock smallpic" flex>
+			<div style="background-image: url('app/images/art/girl.jpg');" class="picblock smallpic" flex>
 			</div>
 		</div>		
 
 		<div class="collagecol" layout="column" flex>
-			<div style="background-image: url('app/images/artwork/glasses.jpg');" class="picblock largepic" flex>
+			<div style="background-image: url('app/images/art/glasses.jpg');" class="picblock largepic" flex>
 			</div>
 		</div>
 	</md-content>
