--- a/app/promptviews/uploadFile.html
+++ b/app/promptviews/uploadFile.html
@@ -9,7 +9,7 @@
       	<md-input-container class="align-center" flex>
       		<div id="prompt-button-container" layout="column"> 
       			<input id="fileUpload" type="file" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" accept="image/*" hide>
-		      	<md-button ng-click="setFile()" class="md-raised">Upload Image</md-button>
+		      	<md-button ng-click="setFile()" class="md-raised">Choose Image</md-button>
 		      	<md-button ng-click="makeBackendRequest()" class="md-raised">Save Changes</md-button>
       		</div>	      	
       	</md-input-container>      		
