Fix for fullscreen images

--- a/app/promptviews/artDisplay.html
+++ b/app/promptviews/artDisplay.html
@@ -1,8 +1,7 @@
 <div id="full-art-wrapper">
-	<div id="full-art-inner-wrapper">
-		<md-button class="md-fab edit-button" ng-click="closeDialog()" style="cursor: pointer;">
-			<i class="material-icons">close</i>
-		</md-button>
-		<img id="full-art-image" src="{{image}}">	
+	<md-button class="md-fab edit-button" ng-click="closeDialog()" style="cursor: pointer;">
+		<i class="material-icons">close</i>
+	</md-button>
+	<div id="full-art-image">		
 	</div>
 </div>
